# DIPC

./: README.md  cartpole.py  ddpg.py  ddpg_eval.py  ddpg_train.py  dip_env.py  ppo_continuous.py  ppo_eval.py  ppo_train.py  pyproject.toml  sac.py  sac_eval.py  sac_train.py  td3.py  td3_eval.py  td3_train.py  utils.py
training/DDPG/2023-07-13_01-03/models/: best_policy.pth  latest_policy.pth
training/PPO/2023-07-13_16-43/models/: best_policy.pth  latest_policy.pth
training/SAC/2023-07-15_22-58/models/: best_policy.pth  latest_policy.pth
training/TD3/2023-07-14_01-32/models/: best_policy.pth  latest_policy.pth
training/TD3/2023-07-14_03-14/models/: best_policy.pth  latest_policy.pth
